--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '>=3.2.6 <4.0.0'
+  sdk: '>=3.1.3 <4.0.0'
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -35,9 +35,9 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  firebase_core: ^2.25.3
   firebase_auth: ^4.17.3
-  cloud_firestore: ^4.15.3
+  firebase_core: ^2.23.0
+  cloud_firestore: ^4.13.2
   firebase_storage: ^11.6.4
   intl: ^0.19.0
   google_nav_bar: ^5.0.6
@@ -52,6 +52,7 @@ dependencies:
   url_launcher: ^6.2.4
   flutter_local_notifications: ^5.0.0
   timezone: ^0.7.0
+  location: ^4.1.1
 
 
 dev_dependencies:
